--- a/requirements.txt
+++ b/requirements.txt
@@ -13,13 +13,19 @@ docker==7.1.0
 frozenlist==1.8.0
 greenlet==3.3.0
 idna==3.11
+iniconfig==2.3.0
+Jinja2==3.1.6
 magic-filter==1.0.12
 Mako==1.3.10
 MarkupSafe==3.0.3
 multidict==6.7.0
+packaging==25.0
+pluggy==1.6.0
 propcache==0.4.1
 pydantic==2.12.5
 pydantic_core==2.41.5
+Pygments==2.19.2
+pytest==9.0.2
 python-dotenv==1.2.1
 requests==2.32.5
 SQLAlchemy==2.0.46
