--- a/requirements.txt
+++ b/requirements.txt
@@ -5,20 +5,39 @@ aiohttp==3.13.3
 aiosignal==1.4.0
 alembic==1.18.1
 annotated-types==0.7.0
+anyio==4.12.1
 asyncpg==0.31.0
 attrs==25.4.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
+distro==1.9.0
 docker==7.1.0
 frozenlist==1.8.0
 greenlet==3.3.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.11
 iniconfig==2.3.0
 Jinja2==3.1.6
+jiter==0.12.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==1.2.7
+langchain-core==1.2.7
+langchain-openai==1.1.7
+langgraph==1.0.7
+langgraph-checkpoint==4.0.0
+langgraph-prebuilt==1.0.7
+langgraph-sdk==0.3.3
+langsmith==0.6.4
 magic-filter==1.0.12
 Mako==1.3.10
 MarkupSafe==3.0.3
 multidict==6.7.0
+openai==2.15.0
+orjson==3.11.5
+ormsgpack==1.12.2
 packaging==25.0
 pluggy==1.6.0
 propcache==0.4.1
@@ -27,11 +46,21 @@ pydantic_core==2.41.5
 Pygments==2.19.2
 pytest==9.0.2
 python-dotenv==1.2.1
+PyYAML==6.0.3
+regex==2026.1.15
 requests==2.32.5
+requests-toolbelt==1.0.0
+sniffio==1.3.1
 SQLAlchemy==2.0.46
+tenacity==9.1.2
 testcontainers==4.14.0
+tiktoken==0.12.0
+tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.3
+uuid_utils==0.14.0
 wrapt==2.0.1
+xxhash==3.6.0
 yarl==1.22.0
+zstandard==0.25.0
